[gd_scene load_steps=22 format=3 uid="uid://b4cnmywngd7jt"]

[ext_resource type="Script" uid="uid://blexpdws4in6r" path="res://levels/acene/room.gd" id="1_4dn3x"]
[ext_resource type="Material" uid="uid://d8v3yg8dker4" path="res://assests/floor_mat.tres" id="1_wfxq2"]
[ext_resource type="Material" uid="uid://8ertouwp47tw" path="res://assests/roof.tres" id="2_lihmd"]
[ext_resource type="Material" uid="uid://cpxr8oy0y4ghl" path="res://assests/wall_mat.tres" id="3_4dn3x"]
[ext_resource type="Script" uid="uid://25qfhoapmqt2" path="res://levels/scripts/door_exit.gd" id="5_bvx1w"]
[ext_resource type="AudioStream" uid="uid://cukgti2hp7ow7" path="res://levels/acene/explosion-312361.mp3" id="6_me2ie"]
[ext_resource type="PackedScene" uid="uid://c7s84wx0uts4c" path="res://levels/acene/blst_particles.tscn" id="7_o31df"]
[ext_resource type="PackedScene" uid="uid://dg63mpibslque" path="res://levels/acene/door_entrance.tscn" id="8_me2ie"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_wfxq2"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_lihmd"]
sky_material = SubResource("ProceduralSkyMaterial_wfxq2")

[sub_resource type="Environment" id="Environment_4dn3x"]
background_mode = 1
background_color = Color(0.252028, 0.252028, 0.252028, 1)
sky = SubResource("Sky_lihmd")
ambient_light_source = 2
ambient_light_color = Color(0.169245, 0.169245, 0.169245, 1)
tonemap_mode = 2
fog_enabled = true
fog_light_color = Color(0.352941, 0.552941, 0.607843, 1)
fog_light_energy = 0.2
fog_sun_scatter = 0.11
fog_density = 0.005

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_itjgt"]
albedo_color = Color(0.356865, 0.406844, 0.769162, 1)
emission_enabled = true
emission = Color(0.595693, 0.380261, 0.600818, 1)

[sub_resource type="BoxMesh" id="BoxMesh_x7rdx"]
material = SubResource("StandardMaterial3D_itjgt")
size = Vector3(2, 3, 0.2)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_sfpvu"]
data = PackedVector3Array(-1, 1.5, 0.1, 1, 1.5, 0.1, -1, -1.5, 0.1, 1, 1.5, 0.1, 1, -1.5, 0.1, -1, -1.5, 0.1, 1, 1.5, -0.1, -1, 1.5, -0.1, 1, -1.5, -0.1, -1, 1.5, -0.1, -1, -1.5, -0.1, 1, -1.5, -0.1, 1, 1.5, 0.1, 1, 1.5, -0.1, 1, -1.5, 0.1, 1, 1.5, -0.1, 1, -1.5, -0.1, 1, -1.5, 0.1, -1, 1.5, -0.1, -1, 1.5, 0.1, -1, -1.5, -0.1, -1, 1.5, 0.1, -1, -1.5, 0.1, -1, -1.5, -0.1, 1, 1.5, 0.1, -1, 1.5, 0.1, 1, 1.5, -0.1, -1, 1.5, 0.1, -1, 1.5, -0.1, 1, 1.5, -0.1, -1, -1.5, 0.1, 1, -1.5, 0.1, -1, -1.5, -0.1, 1, -1.5, 0.1, 1, -1.5, -0.1, -1, -1.5, -0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_itjgt"]
size = Vector3(2, 2.959, 0.231909)

[sub_resource type="Animation" id="Animation_c0q1b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blst_particles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blast\\:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("doorstructure/door_k:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fpvs7"]
resource_name = "blast"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blst_particles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.466667, 1.46667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blast\\:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("doorstructure/door_k:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.28),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qbhdg"]
_data = {
&"RESET": SubResource("Animation_c0q1b"),
&"blast": SubResource("Animation_fpvs7")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_td0hx"]
direction = Vector3(0, 0, -4)
initial_velocity_min = 6.0
initial_velocity_max = 9.0

[sub_resource type="BoxShape3D" id="BoxShape3D_td0hx"]
size = Vector3(2, 3.08008, 3.32806)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wfxq2"]
albedo_color = Color(0.993041, 1, 0.671787, 1)
metallic = 0.97
roughness = 0.0
emission_enabled = true
emission = Color(0.983019, 0.895213, 0, 1)
emission_energy_multiplier = 6.21

[node name="room_structue" type="Node3D"]
script = ExtResource("1_4dn3x")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4dn3x")

[node name="room" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="room"]
size = Vector3(70, 1, 70)
material = ExtResource("1_wfxq2")

[node name="roof" type="CSGBox3D" parent="room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.137939, 5, 0.495148)
size = Vector3(71.0034, 1, 130.99)
material = ExtResource("2_lihmd")

[node name="boundary" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="boundary 1" type="CSGBox3D" parent="boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 2.5, 0)
size = Vector3(1, 5, 70)
material = ExtResource("3_4dn3x")

[node name="boundary 2" type="CSGBox3D" parent="boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 2.5, 0)
size = Vector3(1, 5, 70)
material = ExtResource("3_4dn3x")

[node name="boundary 3" type="CSGBox3D" parent="boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -35.3113)
size = Vector3(70, 5, 1)
material = ExtResource("3_4dn3x")

[node name="DOOR" type="CSGBox3D" parent="boundary/boundary 3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.72105, -0.180366, -0.0367432)
operation = 2
size = Vector3(2.57449, 3.83275, 1.85)
material = ExtResource("3_4dn3x")

[node name="door_exit" type="Area3D" parent="boundary/boundary 3/DOOR" groups=["doors"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.01437, 0)
script = ExtResource("5_bvx1w")

[node name="doorstructure" type="Node3D" parent="boundary/boundary 3/DOOR/door_exit"]
transform = Transform3D(1.47527, 0, 0, 0, 1.33955, 0, 0, 0, 1, 0, 0, 0)

[node name="door_k" type="Node3D" parent="boundary/boundary 3/DOOR/door_exit/doorstructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.09083, 1.5766, 0)

[node name="door_1" type="MeshInstance3D" parent="boundary/boundary 3/DOOR/door_exit/doorstructure/door_k"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.04118, -0.0612322, -0.00534797)
mesh = SubResource("BoxMesh_x7rdx")
skeleton = NodePath("../../../CollisionShape3D")

[node name="StaticBody3D" type="StaticBody3D" parent="boundary/boundary 3/DOOR/door_exit/doorstructure/door_k/door_1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="boundary/boundary 3/DOOR/door_exit/doorstructure/door_k/door_1/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_sfpvu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="boundary/boundary 3/DOOR/door_exit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0496423, 1.51537, -0.00478032)
shape = SubResource("BoxShape3D_itjgt")

[node name="blast\\" type="AudioStreamPlayer3D" parent="boundary/boundary 3/DOOR/door_exit"]
stream = ExtResource("6_me2ie")
volume_db = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="boundary/boundary 3/DOOR/door_exit"]
libraries = {
&"": SubResource("AnimationLibrary_qbhdg")
}

[node name="blst_particles" parent="boundary/boundary 3/DOOR/door_exit" instance=ExtResource("7_o31df")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
emitting = false
one_shot = true
speed_scale = 1.7
process_material = SubResource("ParticleProcessMaterial_td0hx")

[node name="opener" type="Area3D" parent="boundary/boundary 3/DOOR/door_exit"]

[node name="ss" type="CollisionShape3D" parent="boundary/boundary 3/DOOR/door_exit/opener"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56631, 0.00869751)
shape = SubResource("BoxShape3D_td0hx")

[node name="boundary 4" type="CSGBox3D" parent="boundary"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0179138, 2.5, 65.5089)
size = Vector3(70.9594, 5, 1)

[node name="DOOR" type="CSGBox3D" parent="boundary/boundary 4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.96066, -0.602051, -0.169342)
operation = 2
size = Vector3(2.37556, 3.796, 2.776)
material = ExtResource("3_4dn3x")

[node name="door_entrance" parent="boundary/boundary 4/DOOR" instance=ExtResource("8_me2ie")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.35896, 0)

[node name="DIP" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -15, -50)

[node name="structure" type="CSGCombiner3D" parent="DIP"]
use_collision = true

[node name="base" type="CSGBox3D" parent="DIP/structure"]
size = Vector3(70, 1, 30)
material = ExtResource("1_wfxq2")

[node name="wall4" type="CSGBox3D" parent="DIP/structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.941974, 12.2725, -15.5363)
size = Vector3(72.3541, 15, 1)
material = ExtResource("3_4dn3x")

[node name="wall2" type="CSGBox3D" parent="DIP/structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 10, 0)
size = Vector3(1, 20, 30)
material = ExtResource("3_4dn3x")

[node name="wall3" type="CSGBox3D" parent="DIP/structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 10, 0)
size = Vector3(1, 20, 30)
material = ExtResource("3_4dn3x")

[node name="wall" type="CSGBox3D" parent="DIP/structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.74176, 15.107)
size = Vector3(70, 15.4835, 1.841)
material = ExtResource("3_4dn3x")

[node name="DIP2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -15, 50)

[node name="structure" type="CSGCombiner3D" parent="DIP2"]
use_collision = true

[node name="wall2" type="CSGBox3D" parent="DIP2/structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 10, 0.511719)
size = Vector3(1, 20, 31.0234)
material = ExtResource("3_4dn3x")

[node name="wall3" type="CSGBox3D" parent="DIP2/structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 10, 0.526611)
size = Vector3(1, 20, 31.0532)
material = ExtResource("3_4dn3x")

[node name="wall" type="CSGBox3D" parent="DIP2/structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.74176, 15.107)
size = Vector3(70, 15.4835, 1.841)
material = ExtResource("3_4dn3x")

[node name="base" type="CSGBox3D" parent="DIP2/structure/wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.25824, -15.107)
size = Vector3(70, 1, 30)
material = ExtResource("1_wfxq2")

[node name="lighting" type="Node3D" parent="."]

[node name="lamp" type="Node3D" parent="lighting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.10169, -50)

[node name="CSGSphere3D" type="CSGSphere3D" parent="lighting/lamp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.255592, 1.12679, -0.471191)
cast_shadow = 0
radius = 0.323117
rings = 8
material = SubResource("StandardMaterial3D_wfxq2")

[node name="OmniLight3D" type="OmniLight3D" parent="lighting/lamp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.112503, -2.07142, -0.416)
light_color = Color(1, 1, 0.760784, 1)
light_energy = 2.5
omni_range = 60.0

[node name="lamp2" type="Node3D" parent="lighting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.44348, 9.83506)

[node name="CSGSphere3D" type="CSGSphere3D" parent="lighting/lamp2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.255592, 1.12679, -0.471191)
cast_shadow = 0
radius = 0.323117
rings = 8
material = SubResource("StandardMaterial3D_wfxq2")

[node name="OmniLight3D" type="OmniLight3D" parent="lighting/lamp2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.112503, -2.75833, -0.416)
light_color = Color(0.745098, 1, 0.760784, 1)
light_energy = 2.0
omni_range = 100.0
omni_attenuation = 0.9

[connection signal="body_entered" from="boundary/boundary 3/DOOR/door_exit" to="." method="_on_door_exit_body_entered"]
[connection signal="body_entered" from="boundary/boundary 3/DOOR/door_exit" to="boundary/boundary 3/DOOR/door_exit" method="_on_body_entered"]
[connection signal="body_exited" from="boundary/boundary 3/DOOR/door_exit" to="boundary/boundary 3/DOOR/door_exit" method="_on_body_exited"]
[connection signal="animation_finished" from="boundary/boundary 3/DOOR/door_exit/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="boundary/boundary 3/DOOR/door_exit/AnimationPlayer" to="boundary/boundary 3/DOOR/door_exit" method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="boundary/boundary 3/DOOR/door_exit/opener" to="." method="_on_opener_body_entered"]
[connection signal="body_entered" from="boundary/boundary 3/DOOR/door_exit/opener" to="boundary/boundary 3/DOOR/door_exit" method="_on_opener_body_entered"]
